--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,7 +2,7 @@ docs_dir: docs/
 repo_name: 'TranslationalAICenterISU/aitrends2023'
 repo_url: 'https://github.com/TranslationalAICenterISU/aitrends2023'
 
-site_name: 'A Deep Dive into Deep Learning Algorithms and Architectures'
+site_name: 'Demystifying Trending AI Techniques'
 site_description: 'Documentation for tutorial on - A Deep Dive into Deep Learning Algorithms and Architectures'
 site_author: 'TrAC Team, CyVerse, & Midwest Big Data Summer School'
 site_url: 'https://translationalaicenterisu.github.io/aitrends2023'
