--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -21,6 +21,8 @@ nav:
     - 'Code of Conduct': getting_started/code_conduct.md
     - 'Logistics': getting_started/logistics.md
     - 'Schedule': getting_started/schedule.md
+  - 'Sections':
+    - '1. Introduction': sections/m01_intro.md
 
 # JavaScript for Intercom Widget
 extra_javascript:
